--- a/Day 2- HTML Fundamentals/index.html
+++ b/Day 2- HTML Fundamentals/index.html
@@ -5,13 +5,57 @@
     <title>HTML Fundamentals</title>
   </head>
   <body>
-    <h1>This is heading 1</h1>
-    <h2>This is heading 2</h2>
-    <h3>This is heading 3</h3>
-    <h4>This is heading 4</h4>
-    <h5>This is heading 5</h5>
-    <h6>This is heading 6</h6>
-    <p>This is a paragraph</p>
-    <a href="https://github.com/sakshyam35/introduction-to-web-development" target="_blank">This is my github page</a>
+    <main>
+      <!-- This is our headings. -->
+      <section>
+        <h1>This is heading 1</h1>
+        <h2>This is heading 2</h2>
+        <h3>This is heading 3</h3>
+        <h4>This is heading 4</h4>
+        <h5>This is heading 5</h5>
+        <h6>This is heading 6</h6>
+        <p>This is a paragraph</p>
+      </section>
+      <secton>
+        <!-- This is our links and images. -->
+        <a
+          href="https://github.com/sakshyam35/introduction-to-web-development"
+          target="_blank"
+          >This is my github page</a
+        >
+        <br /><br />
+        <img width="50%" src="./public/images/SAO.jpg" alt="image_anime" />
+      </secton>
+      <section>
+        <!-- This is our lists. -->
+        <ol>
+          <li>First item</li>
+          <li>Second item</li>
+          <li>Third item</li>
+        </ol>
+        <ul>
+          <li>First item</li>
+          <li>Second item</li>
+          <li>Third item</li>
+        </ul>
+        <dl>
+          <dl>HTML</dl>
+          <dd>Hypertext Markup Language</dd>
+          <dl>CSS</dl>
+          <dd>Cascading Style Sheet</dd>
+          <dl>Javascript</dl>
+          <dd>A programming language for web.</dd>
+        </dl>
+      </section>
+      <section>
+        <!-- This is our form. -->
+         <form>
+          Name:<input type="text" name="name">
+          Email:<input type="email" name="email">
+          Password:<input type="password" name="password">
+          <button>Submit</button>
+         </form>
+      </section>
+    </main>
   </body>
 </html>
