feat: Start CSS Basics.

--- a/Day 2- HTML Fundamentals/exercise.html
+++ b/Day 2- HTML Fundamentals/exercise.html
@@ -20,9 +20,7 @@
         <p>Blood group: A+</p>
         <p>
           Email:
-          <a href="mailto:tamrakarsakshyam@gmail.com"
-            >tamrakarsakshyam@gmail.com</a
-          >
+          <a href="mailto:tamrakarsakshyam@gmail.com">tamrakarsakshyam@gmail.com</a>
         </p>
       </section>
       <footer>
