--- a/Day 5- Javascript Basics/index.html
+++ b/Day 5- Javascript Basics/index.html
@@ -12,7 +12,7 @@
 
       <h2 id="heading-2">This is heading 2.</h2>
       <p class="para">This is paragraph.</p>
-      <button class="btn">Click this</button>
+      <button class="btn">Click this</button> <a href="https://github.com/sakshyam35">My Github</a>
     </main>
     <script src="index.js"></script>
   </body>
